Fix white space bug in Safari

--- a/themes/OpenFisca-2022/assets/css/components/cards/card.css
+++ b/themes/OpenFisca-2022/assets/css/components/cards/card.css
@@ -23,7 +23,7 @@
 }
 
 .card_flag {
-  margin-top: var(--xs);
+  margin-top: var(--xs2);
   margin-left: var(--xs2);
 }
 
